--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -287,7 +287,7 @@ button:hover {
     ===========================  */
 
 /* Mobile Styles (max-width: 375px) */
-@media (max-width: 375px) {
+@media (max-width: 375px) and (min-width: 320px) {
   #navbar {
     flex-direction: column;
     justify-content: center;
@@ -311,6 +311,10 @@ button:hover {
     width: 100%;
     margin-top: 10px;
   }
+  #decks-container {
+    margin-top: 50px;
+    width: 100%;
+  }
 }
 
 /* Tablet Styles (max-width: 760px) */
@@ -330,12 +334,12 @@ button:hover {
 }
 
 /* Desktop Styles (min-width: 1024px) */
-@media (min-width: 1024px) {
+@media (max-width: 1024px) {
   #flashcard-container {
     width: 300px;
   }
 
   button {
-    padding: 10px 15px;
+    padding: 10px 20px;
   }
 }
